[project]
name = "planning-dia"
version = "0.1.0"
description = "Extract schedule data from planning images"
requires-python = ">=3.11"

dependencies = [
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planning_dia"]

[tool.ruff]
line-length = 88
src = ["src"]