[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-dia"
version = "1.0.0"
description = "Extraction de tableaux depuis des images via morphologie mathématique (OpenCV)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",   # client test pour FastAPI TestClient
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]